tests/typing/bad/testfile-call-2.c

struct S { int a; };
void f(int x) {}
int main() { struct S s; f(s); }

